gen/Antlr4/AnacondaParser.java
// Generated from C:/Users/a3rog/BorisTest/src/antlr4\Anaconda.g4 by ANTLR 4.9.2
package antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AnacondaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Add=1, Subtract=2, Multiply=3, Divide=4, Power=5, Modulo=6, Assign=7, 
		AssignPlus=8, AssignMinus=9, AsssignMultiply=10, AsssignDivide=11, AsssignPower=12, 
		AsssignModulo=13, Not=14, GreaterThan=15, LessThan=16, Equals=17, NegativeEquals=18, 
		GreaterThanEquals=19, LessThanEquals=20, Or=21, And=22, Int=23, Float=24, 
		Bool=25, Void=26, If=27, Else=28, While=29, Return=30, LeftPara=31, RightPara=32, 
		LeftBracket=33, RightBracket=34, Comma=35, Variable=36, Number=37, EndOfLine=38, 
		Space=39;
	public static final int
		RULE_compile = 0, RULE_statements = 1, RULE_statement = 2, RULE_function = 3, 
		RULE_functionReturn = 4, RULE_functionParam = 5, RULE_declaration = 6, 
		RULE_assignment = 7, RULE_ifElseStatement = 8, RULE_ifStatement = 9, RULE_elseIfStatement = 10, 
		RULE_elseStatement = 11, RULE_whileStatement = 12, RULE_expression = 13, 
		RULE_functionCallParam = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"compile", "statements", "statement", "function", "functionReturn", "functionParam", 
			"declaration", "assignment", "ifElseStatement", "ifStatement", "elseIfStatement", 
			"elseStatement", "whileStatement", "expression", "functionCallParam"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'*'", "'/'", "'^'", "'%'", "'='", "'+='", "'-='", 
			"'*='", "'/='", "'^='", "'%='", "'!'", "'>'", "'<'", "'=='", "'!='", 
			"'>='", "'<='", "'||'", "'&&'", "'int'", "'float'", "'bool'", "'void'", 
			"'if'", "'else'", "'while'", "'return'", "'('", "')'", "'{'", "'}'", 
			"','", null, null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Add", "Subtract", "Multiply", "Divide", "Power", "Modulo", "Assign", 
			"AssignPlus", "AssignMinus", "AsssignMultiply", "AsssignDivide", "AsssignPower", 
			"AsssignModulo", "Not", "GreaterThan", "LessThan", "Equals", "NegativeEquals", 
			"GreaterThanEquals", "LessThanEquals", "Or", "And", "Int", "Float", "Bool", 
			"Void", "If", "Else", "While", "Return", "LeftPara", "RightPara", "LeftBracket", 
			"RightBracket", "Comma", "Variable", "Number", "EndOfLine", "Space"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Anaconda.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AnacondaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompileContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public CompileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).enterCompile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).exitCompile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnacondaVisitor ) return ((AnacondaVisitor<? extends T>)visitor).visitCompile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompileContext compile() throws RecognitionException {
		CompileContext _localctx = new CompileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			statements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> EndOfLine() { return getTokens(AnacondaParser.EndOfLine); }
		public TerminalNode EndOfLine(int i) {
			return getToken(AnacondaParser.EndOfLine, i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnacondaVisitor ) return ((AnacondaVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Add) | (1L << Subtract) | (1L << Not) | (1L << Int) | (1L << Float) | (1L << Bool) | (1L << Void) | (1L << If) | (1L << While) | (1L << Return) | (1L << LeftPara) | (1L << Variable) | (1L << Number))) != 0)) {
				{
				{
				setState(32);
				statement();
				setState(33);
				match(EndOfLine);
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public FunctionReturnContext functionReturn() {
			return getRuleContext(FunctionReturnContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public IfElseStatementContext ifElseStatement() {
			return getRuleContext(IfElseStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnacondaVisitor ) return ((AnacondaVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(47);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				function();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				functionReturn();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(42);
				declaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(43);
				assignment();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(44);
				ifElseStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(45);
				whileStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(46);
				expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public Token type;
		public Token name;
		public FunctionParamContext params;
		public StatementsContext body;
		public TerminalNode LeftPara() { return getToken(AnacondaParser.LeftPara, 0); }
		public TerminalNode RightPara() { return getToken(AnacondaParser.RightPara, 0); }
		public TerminalNode LeftBracket() { return getToken(AnacondaParser.LeftBracket, 0); }
		public TerminalNode RightBracket() { return getToken(AnacondaParser.RightBracket, 0); }
		public TerminalNode Int() { return getToken(AnacondaParser.Int, 0); }
		public TerminalNode Variable() { return getToken(AnacondaParser.Variable, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public List<FunctionParamContext> functionParam() {
			return getRuleContexts(FunctionParamContext.class);
		}
		public FunctionParamContext functionParam(int i) {
			return getRuleContext(FunctionParamContext.class,i);
		}
		public TerminalNode Float() { return getToken(AnacondaParser.Float, 0); }
		public TerminalNode Bool() { return getToken(AnacondaParser.Bool, 0); }
		public TerminalNode Void() { return getToken(AnacondaParser.Void, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnacondaVisitor ) return ((AnacondaVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function);
		int _la;
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				((FunctionContext)_localctx).type = match(Int);
				setState(50);
				((FunctionContext)_localctx).name = match(Variable);
				setState(51);
				match(LeftPara);
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Float) | (1L << Bool) | (1L << Comma))) != 0)) {
					{
					{
					setState(52);
					((FunctionContext)_localctx).params = functionParam();
					}
					}
					setState(57);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(58);
				match(RightPara);
				setState(59);
				match(LeftBracket);
				setState(60);
				((FunctionContext)_localctx).body = statements();
				setState(61);
				match(RightBracket);
				}
				break;
			case Float:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				((FunctionContext)_localctx).type = match(Float);
				setState(64);
				((FunctionContext)_localctx).name = match(Variable);
				setState(65);
				match(LeftPara);
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Float) | (1L << Bool) | (1L << Comma))) != 0)) {
					{
					{
					setState(66);
					((FunctionContext)_localctx).params = functionParam();
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(72);
				match(RightPara);
				setState(73);
				match(LeftBracket);
				setState(74);
				((FunctionContext)_localctx).body = statements();
				setState(75);
				match(RightBracket);
				}
				break;
			case Bool:
				enterOuterAlt(_localctx, 3);
				{
				setState(77);
				((FunctionContext)_localctx).type = match(Bool);
				setState(78);
				((FunctionContext)_localctx).name = match(Variable);
				setState(79);
				match(LeftPara);
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Float) | (1L << Bool) | (1L << Comma))) != 0)) {
					{
					{
					setState(80);
					((FunctionContext)_localctx).params = functionParam();
					}
					}
					setState(85);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(86);
				match(RightPara);
				setState(87);
				match(LeftBracket);
				setState(88);
				((FunctionContext)_localctx).body = statements();
				setState(89);
				match(RightBracket);
				}
				break;
			case Void:
				enterOuterAlt(_localctx, 4);
				{
				setState(91);
				((FunctionContext)_localctx).type = match(Void);
				setState(92);
				((FunctionContext)_localctx).name = match(Variable);
				setState(93);
				match(LeftPara);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Float) | (1L << Bool) | (1L << Comma))) != 0)) {
					{
					{
					setState(94);
					((FunctionContext)_localctx).params = functionParam();
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(100);
				match(RightPara);
				setState(101);
				match(LeftBracket);
				setState(102);
				((FunctionContext)_localctx).body = statements();
				setState(103);
				match(RightBracket);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionReturnContext extends ParserRuleContext {
		public ExpressionContext expr;
		public TerminalNode Return() { return getToken(AnacondaParser.Return, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FunctionReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionReturn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).enterFunctionReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).exitFunctionReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnacondaVisitor ) return ((AnacondaVisitor<? extends T>)visitor).visitFunctionReturn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionReturnContext functionReturn() throws RecognitionException {
		FunctionReturnContext _localctx = new FunctionReturnContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionReturn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(Return);
			setState(108);
			((FunctionReturnContext)_localctx).expr = expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionParamContext extends ParserRuleContext {
		public DeclarationContext param;
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public TerminalNode Comma() { return getToken(AnacondaParser.Comma, 0); }
		public FunctionParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionParam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).enterFunctionParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).exitFunctionParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnacondaVisitor ) return ((AnacondaVisitor<? extends T>)visitor).visitFunctionParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionParamContext functionParam() throws RecognitionException {
		FunctionParamContext _localctx = new FunctionParamContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionParam);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
			case Float:
			case Bool:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				((FunctionParamContext)_localctx).param = declaration();
				}
				break;
			case Comma:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(Comma);
				setState(112);
				((FunctionParamContext)_localctx).param = declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public Token type;
		public Token name;
		public TerminalNode Float() { return getToken(AnacondaParser.Float, 0); }
		public TerminalNode Variable() { return getToken(AnacondaParser.Variable, 0); }
		public TerminalNode Int() { return getToken(AnacondaParser.Int, 0); }
		public TerminalNode Bool() { return getToken(AnacondaParser.Bool, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnacondaVisitor ) return ((AnacondaVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaration);
		try {
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Float:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				((DeclarationContext)_localctx).type = match(Float);
				setState(116);
				((DeclarationContext)_localctx).name = match(Variable);
				}
				break;
			case Int:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				((DeclarationContext)_localctx).type = match(Int);
				setState(118);
				((DeclarationContext)_localctx).name = match(Variable);
				}
				break;
			case Bool:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				((DeclarationContext)_localctx).type = match(Bool);
				setState(120);
				((DeclarationContext)_localctx).name = match(Variable);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public Token variable;
		public Token op;
		public ExpressionContext right;
		public TerminalNode Variable() { return getToken(AnacondaParser.Variable, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Assign() { return getToken(AnacondaParser.Assign, 0); }
		public TerminalNode AssignPlus() { return getToken(AnacondaParser.AssignPlus, 0); }
		public TerminalNode AssignMinus() { return getToken(AnacondaParser.AssignMinus, 0); }
		public TerminalNode AsssignMultiply() { return getToken(AnacondaParser.AsssignMultiply, 0); }
		public TerminalNode AsssignDivide() { return getToken(AnacondaParser.AsssignDivide, 0); }
		public TerminalNode AsssignPower() { return getToken(AnacondaParser.AsssignPower, 0); }
		public TerminalNode AsssignModulo() { return getToken(AnacondaParser.AsssignModulo, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnacondaVisitor ) return ((AnacondaVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			((AssignmentContext)_localctx).variable = match(Variable);
			setState(124);
			((AssignmentContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Assign) | (1L << AssignPlus) | (1L << AssignMinus) | (1L << AsssignMultiply) | (1L << AsssignDivide) | (1L << AsssignPower) | (1L << AsssignModulo))) != 0)) ) {
				((AssignmentContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(125);
			((AssignmentContext)_localctx).right = expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfElseStatementContext extends ParserRuleContext {
		public IfStatementContext ifStat;
		public ElseIfStatementContext elseIfStat;
		public ElseStatementContext elseStat;
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public List<ElseIfStatementContext> elseIfStatement() {
			return getRuleContexts(ElseIfStatementContext.class);
		}
		public ElseIfStatementContext elseIfStatement(int i) {
			return getRuleContext(ElseIfStatementContext.class,i);
		}
		public ElseStatementContext elseStatement() {
			return getRuleContext(ElseStatementContext.class,0);
		}
		public IfElseStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifElseStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).enterIfElseStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).exitIfElseStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnacondaVisitor ) return ((AnacondaVisitor<? extends T>)visitor).visitIfElseStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfElseStatementContext ifElseStatement() throws RecognitionException {
		IfElseStatementContext _localctx = new IfElseStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifElseStatement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			((IfElseStatementContext)_localctx).ifStat = ifStatement();
			setState(131);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(128);
					((IfElseStatementContext)_localctx).elseIfStat = elseIfStatement();
					}
					} 
				}
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Else) {
				{
				setState(134);
				((IfElseStatementContext)_localctx).elseStat = elseStatement();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public ExpressionContext expr;
		public StatementsContext body;
		public TerminalNode If() { return getToken(AnacondaParser.If, 0); }
		public TerminalNode LeftPara() { return getToken(AnacondaParser.LeftPara, 0); }
		public TerminalNode RightPara() { return getToken(AnacondaParser.RightPara, 0); }
		public TerminalNode LeftBracket() { return getToken(AnacondaParser.LeftBracket, 0); }
		public TerminalNode RightBracket() { return getToken(AnacondaParser.RightBracket, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnacondaListener ) ((AnacondaListener)listener).exitIfStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnacondaVisitor ) return ((AnacondaVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ifStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(If);
			setState(138);
			match(LeftPara);
			setState(139);
			((IfStatementContext)_localctx).expr = expression(0);
			setState(140);
			match(RightPara);
			setState(141);
			match(LeftBracket);
			setState(142);
			((IfStatementContext)_localctx).body = statements();
			setState(143);
